--- a/views/templates/scripts.html
+++ b/views/templates/scripts.html
@@ -1,3 +1,4 @@
 <script src="/jquery/jquery.min.js"></script>
-<script src="/tether/js/tether.min.js"></script>
+<!--script src="/tether/js/tether.min.js"></script!-->
+<script src="/popperjs/popper.min.js"></script>
 <script src="/bootstrap/js/bootstrap.min.js"></script>
