--- a/views/user/newUser.ejs
+++ b/views/user/newUser.ejs
@@ -4,20 +4,20 @@
         <%- template.navbar %>
             <div class="container">
                 <div class="starter-template">
-                    <h1 class="text-center title-1">
+                    <h1 class="title-1">
                         <%= title %>
                     </h1>
                     <br>
                     <form action="/users/add" method="post">
                         <div class="form-group">
                             <label for="username">Nome</label>
-                            <input type="text" class="form-control col-10 offset-1 col-sm-8 offset-sm-2" id="username" name="username" placeholder="Nome"
+                            <input type="text" class="form-control" id="username" name="username" placeholder="Nome"
                                 aria-describedby="basic-addon1" required>
                         </div>
                         <br>
                         <div class="form-group">
                             <label for="useremail">Email</label>
-                            <input type="email" class="form-control col-10 offset-1 col-sm-8 offset-sm-2" id="useremail" name="useremail" placeholder="Email"
+                            <input type="email" class="form-control" id="useremail" name="useremail" placeholder="Email"
                                 aria-describedby="basic-addon1" required>
                         </div>
                         <br>
