--- a/views/bill/editBill.ejs
+++ b/views/bill/editBill.ejs
@@ -4,7 +4,7 @@
         <%- template.navbar %>
             <div class="container">
                 <div class="starter-template">
-                    <h1 class="text-center title-1">
+                    <h1 class="title-1">
                         <%= title %>
                     </h1>
                     <br>
@@ -12,13 +12,13 @@
                         <input type="hidden" name="id" value="<%= bill._id %>">
                         <div class="form-group">
                             <label for="company">Empresa</label>
-                            <input type="text" class="form-control col-10 offset-1 col-sm-8 offset-sm-2" id="company" name="company" placeholder="Empresa"
+                            <input type="text" class="form-control" id="company" name="company" placeholder="Empresa"
                                 aria-describedby="basic-addon1" value="<%= bill.company %>">
                         </div>
                         <br>
                         <div class="form-group">
                             <label for="valueSourceType">Tipo FonteValor</label>
-                            <select name='valueSourceType' class="form-control col-10 offset-1 col-sm-8 offset-sm-2" id="valueSourceType">
+                            <select name='valueSourceType' class="form-control" id="valueSourceType">
                                 <% var keys = Object.keys(valueSourceType); keys.forEach(function(vst){ %>
                                     <option <% if (vst == bill.valueSourceType) {%>selected="selected"<% } %> value="<%= vst %>"><%= valueSourceType[vst] %></option>
                                 <%})%>
@@ -27,7 +27,7 @@
                         <br>
                         <div class="form-group" id="emailGroup" style="display:none">
                             <label for="email">Email</label>
-                            <select name='email' class="form-control col-10 offset-1 col-sm-8 offset-sm-2" id="emailOptions">
+                            <select name='email' class="form-control text-center" id="emailOptions">
                             </select>
                         </div>
                         <br>
