--- a/views/bill/newBill.ejs
+++ b/views/bill/newBill.ejs
@@ -5,20 +5,20 @@
             <div class="container">
                 <row>
                     <div class="starter-template">
-                        <h1 class="text-center title-1">
+                        <h1 class="title-1">
                             <%= title %>
                         </h1>
                         <br>
                         <form action="/bills/add" method="post">
                             <div class="form-group">
                                 <label for="company">Empresa</label>
-                                <input type="text" class="form-control col-10 offset-1 col-sm-8 offset-sm-2" id="company" name="company" placeholder="Nome"
+                                <input type="text" class="form-control" id="company" name="company" placeholder="Nome"
                                     aria-describedby="basic-addon1" required>
                             </div>
                             <br>
                             <div class="form-group">
                                 <label for="valueSourceType">Tipo FonteValor</label>
-                                <select name='valueSourceType' class="form-control col-10 offset-1 col-sm-8 offset-sm-2" id="valueSourceType">
+                                <select name='valueSourceType' class="form-control" id="valueSourceType">
                                         <% var keys = Object.keys(valueSourceType); keys.forEach(function(vst){ %>
                                             <option value=<%= vst %>><%= valueSourceType[vst] %></option>
                                         <%})%>
@@ -27,13 +27,13 @@
                             <br>
                             <div class="form-group" id="emailGroup" style="display:none">
                                 <label for="email">Email</label>
-                                <select name='email' class="form-control col-10 offset-1 col-sm-8 offset-sm-2" id="emailOptions">
+                                <select name='email' class="form-control" id="emailOptions">
                                 </select>
                             </div>
                             <br>
                             <div class="form-group" id="tableGroup" style="display:none">
                                 <label for="table">Tabela</label>
-                                <select name='table' class="form-control col-10 offset-1 col-sm-8 offset-sm-2" id="tableOptions">
+                                <select name='table' class="form-control" id="tableOptions">
                                 </select>
                             </div>
                             <br>
