--- a/views/email/editEmail.ejs
+++ b/views/email/editEmail.ejs
@@ -4,7 +4,7 @@
         <%- template.navbar %>
             <div class="container">
                 <div class="starter-template">
-                    <h1 class="text-center title-1">
+                    <h1 class="title-1">
                         <%= title %>
                     </h1>
                     <br>
@@ -12,7 +12,7 @@
                         <input type="hidden" name="id" value="<%= email._id %>">
                         <div class="form-group">
                             <label for="address">Nome</label>
-                            <input type="text" class="form-control col-10 offset-1 col-sm-8 offset-sm-2" id="address" name="address" placeholder="Email"
+                            <input type="text" class="form-control" id="address" name="address" placeholder="Email"
                                 aria-describedby="basic-addon1" value="<%= email.address %>">
                         </div>
                         <br>
