--- a/views/email/newEmail.ejs
+++ b/views/email/newEmail.ejs
@@ -4,14 +4,14 @@
         <%- template.navbar %>
             <div class="container">
                 <div class="starter-template">
-                    <h1 class="text-center title-1">
+                    <h1 class="title-1">
                         <%= title %>
                     </h1>
                     <br>
                     <form action="/emails/add" method="post">
                         <div class="form-group">
                             <label for="address">Endereço</label>
-                            <input type="email" class="form-control col-10 offset-1 col-sm-8 offset-sm-2" id="address" name="address" placeholder="Email"
+                            <input type="email" class="form-control" id="address" name="address" placeholder="Email"
                                 aria-describedby="basic-addon1" required>
                         </div>
                         <br>
