--- a/views/templates/scripts.html
+++ b/views/templates/scripts.html
@@ -1,4 +1,5 @@
 <script src="/jquery/jquery.min.js"></script>
+<script src="/jquery-mask/jquery.mask.min.js"></script>
 <!--script src="/tether/js/tether.min.js"></script!-->
 <script src="/popperjs/popper.min.js"></script>
 <script src="/bootstrap/js/bootstrap.min.js"></script>
