--- a/views/user/editUser.ejs
+++ b/views/user/editUser.ejs
@@ -4,7 +4,7 @@
         <%- template.navbar %>
             <div class="container">
                 <div class="starter-template">
-                    <h1 class="text-center title-1">
+                    <h1 class="title-1">
                         <%= title %>
                     </h1>
                     <br>
@@ -12,13 +12,13 @@
                         <input type="hidden" name="id" value="<%= user._id %>">
                         <div class="form-group">
                             <label for="username">Nome</label>
-                            <input type="text" class="form-control col-10 offset-1 col-sm-8 offset-sm-2" id="username" name="username" placeholder="Nome"
+                            <input type="text" class="form-control" id="username" name="username" placeholder="Nome"
                                 aria-describedby="basic-addon1" value="<%= user.username %>">
                         </div>
                         <br>
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="email" class="form-control col-10 offset-1 col-sm-8 offset-sm-2" id="email" name="email" placeholder="Email"
+                            <input type="email" class="form-control" id="email" name="email" placeholder="Email"
                                 aria-describedby="basic-addon1" value="<%= user.email %>">
                         </div>
                         <br>
