--- a/views/email/emailList.ejs
+++ b/views/email/emailList.ejs
@@ -4,31 +4,30 @@
         <%- template.navbar %>
             <div class="container">
                 <div class="starter-template">
-                    <h1 class="text-center title-1">
+                    <h1 class="title-1">
                         <%= title %>
                     </h1>
                     <br>
-                    <div class="justify-content-center">
-                        <table class="table">
-                            <thead>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Email</th>
+                                <th>Ações</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% emailList.forEach(function(email){ %>
                                 <tr>
-                                    <th>Email</th>
-                                    <th>Ações</th>
+                                    <td>
+                                        <%= email.address %>
+                                    </td>
+                                    <td><a href='/emails/edit/<%= email._id %>'>Editar</a>
+                                        <a href='/emails/remove/<%= email._id %>'>Excluir</a>
+                                    </td>
                                 </tr>
-                            </thead>
-                            <tbody>
-                                <% emailList.forEach(function(email){ %>
-                                    <tr>
-                                        <td>
-                                            <%= email.address %>
-                                        </td>
-                                        <td><a href='/emails/edit/<%= email._id %>'>Editar</a>
-                                            <a href='/emails/remove/<%= email._id %>'>Excluir</a></td>
-                                    </tr>
-                                    <%})%>
-                            </tbody>
-                        </table>
-                    </div>
+                                <%})%>
+                        </tbody>
+                    </table>
                 </div>
             </div>
             <%- template.scripts %>
