--- a/views/bill/billList.ejs
+++ b/views/bill/billList.ejs
@@ -4,35 +4,35 @@
         <%- template.navbar %>
             <div class="container">
                 <div class="starter-template">
-                    <h1 class="text-center title-1">
+                    <h1 class="title-1">
                         <%= title %>
                     </h1>
                     <br>
-                    <div class="justify-content-center">
-                        <table class="table">
-                            <thead>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Empresa</th>
+                                <th>Fonte Valor</th>
+                                <th>Ações</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% billList.forEach(function(bill){ %>
                                 <tr>
-                                    <th>Empresa</th>
-                                    <th>Fonte Valor</th>
-                                    <th>Ações</th>
+                                    <td>
+                                        <%= bill.company %>
+                                    </td>
+                                    <td>
+                                        <%= bill.valueSourceType %>
+                                    </td>
+                                    <td>
+                                        <a href='/bills/edit/<%= bill._id %>'>Editar</a>
+                                        <a href='/bills/remove/<%= bill._id %>'>Excluir</a>
+                                    </td>
                                 </tr>
-                            </thead>
-                            <tbody>
-                                <% billList.forEach(function(bill){ %>
-                                    <tr>
-                                        <td>
-                                            <%= bill.company %>
-                                        </td>
-                                        <td>
-                                            <%= bill.valueSourceType %>
-                                        </td>
-                                        <td><a href='/bills/edit/<%= bill._id %>'>Editar</a>
-                                            <a href='/bills/remove/<%= bill._id %>'>Excluir</a></td>
-                                    </tr>
-                                    <%})%>
-                            </tbody>
-                        </table>
-                    </div>
+                                <%})%>
+                        </tbody>
+                    </table>
                 </div>
             </div>
             <%- template.scripts %>
