--- a/views/user/userList.ejs
+++ b/views/user/userList.ejs
@@ -4,35 +4,35 @@
         <%- template.navbar %>
             <div class="container">
                 <div class="starter-template">
-                    <h1 class="text-center title-1">
+                    <h1 class="title-1">
                         <%= title %>
                     </h1>
                     <br>
-                    <div class="justify-content-center">
-                        <table class="table">
-                            <thead>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Nome</th>
+                                <th>Email</th>
+                                <th>Ações</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% userList.forEach(function(user){ %>
                                 <tr>
-                                    <th>Nome</th>
-                                    <th>Email</th>
-                                    <th>Ações</th>
+                                    <td>
+                                        <%= user.username %>
+                                    </td>
+                                    <td style="word-break: break-word;">
+                                        <%= user.email %>
+                                    </td>
+                                    <td>
+                                        <a href='/users/edit/<%= user._id %>'>Editar</a>
+                                        <a href='/users/remove/<%= user._id %>'>Excluir</a>
+                                    </td>
                                 </tr>
-                            </thead>
-                            <tbody>
-                                <% userList.forEach(function(user){ %>
-                                    <tr>
-                                        <td>
-                                            <%= user.username %>
-                                        </td>
-                                        <td style="word-break: break-word;">
-                                            <%= user.email %>
-                                        </td>
-                                        <td><a href='/users/edit/<%= user._id %>'>Editar</a>
-                                            <a href='/users/remove/<%= user._id %>'>Excluir</a></td>
-                                    </tr>
-                                    <%})%>
-                            </tbody>
-                        </table>
-                    </div>
+                                <%})%>
+                        </tbody>
+                    </table>
                 </div>
             </div>
             <%- template.scripts %>
