--- a/views/templates/navbar.html
+++ b/views/templates/navbar.html
@@ -14,6 +14,13 @@
         </div>
     </li>
     <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tabelas</a>
+      <div class="dropdown-menu" aria-labelledby="dropdown01">
+        <a class="dropdown-item" href="/tables/list">Listar</a>
+        <a class="dropdown-item" href="/tables/new">Cadastar</a>
+      </div>
+    </li>
+    <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contas</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
             <a class="dropdown-item" href="/bills/list">Listar</a>
@@ -25,19 +32,13 @@
             <div class="dropdown-menu" aria-labelledby="dropdown01">
                 <a class="dropdown-item" href="/emails/list">Listar</a>
                 <a class="dropdown-item" href="/emails/new">Cadastar</a>
+                <a class="dropdown-item" href="/emails/test">Testar</a>
             </div>
     </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tabelas</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="/tables/list">Listar</a>
-          <a class="dropdown-item" href="/tables/new">Cadastar</a>
-        </div>
-      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Buscar">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
     </form>
   </div>
 </nav>
