--- a/views/user/newUser.ejs
+++ b/views/user/newUser.ejs
@@ -10,14 +10,14 @@
                     <br>
                     <form action="/users/add" method="post">
                         <div class="form-group">
-                            <label for="username">Nome</label>
-                            <input type="text" class="form-control" id="username" name="username" placeholder="Nome"
+                            <label for="name">Nome</label>
+                            <input type="text" class="form-control" id="name" name="name" placeholder="Nome"
                                 aria-describedby="basic-addon1" required>
                         </div>
                         <br>
                         <div class="form-group">
-                            <label for="useremail">Email</label>
-                            <input type="email" class="form-control" id="useremail" name="useremail" placeholder="Email"
+                            <label for="email">Email</label>
+                            <input type="email" class="form-control" id="email" name="email" placeholder="Email"
                                 aria-describedby="basic-addon1" required>
                         </div>
                         <br>
