--- a/views/user/userList.ejs
+++ b/views/user/userList.ejs
@@ -20,7 +20,7 @@
                             <% userList.forEach(function(user){ %>
                                 <tr>
                                     <td>
-                                        <%= user.username %>
+                                        <%= user.name %>
                                     </td>
                                     <td style="word-break: break-word;">
                                         <%= user.email %>
