--- a/views/user/editUser.ejs
+++ b/views/user/editUser.ejs
@@ -11,9 +11,9 @@
                     <form action="/users/update" method="post">
                         <input type="hidden" name="id" value="<%= user._id %>">
                         <div class="form-group">
-                            <label for="username">Nome</label>
-                            <input type="text" class="form-control" id="username" name="username" placeholder="Nome"
-                                aria-describedby="basic-addon1" value="<%= user.username %>">
+                            <label for="name">Nome</label>
+                            <input type="text" class="form-control" id="name" name="name" placeholder="Nome"
+                                aria-describedby="basic-addon1" value="<%= user.name %>">
                         </div>
                         <br>
                         <div class="form-group">
