callback to Promise

--- a/views/email/email.ejs
+++ b/views/email/email.ejs
@@ -12,15 +12,8 @@
             <%= header.value %>
          </li>
         <% }) %>
-        <li>Anexo: <a href='data:application/pdf;base64,<%- attachment.attachment.data %>' title='Download pdf document'><%= attachment.filename %></a></li>
+        <li>Anexo: <% if (attachment != null) {%><a href='data:application/pdf;base64,<%- attachment.attachment.data %>' title='Download pdf document'><%= attachment.filename %></a><%}%></li>
         <li>Valor: <%= valor %></li>
     </ul>
-    <script>
-        //var txt = '<%- JSON.stringify(message) %>';
-        //var msg = JSON.parse(txt);
-        //console.log(msg);
-        //var data = '<%- attachment.attachment.data %>';
-        //window.open("data:application/pdf;base64," + data);
-    </script>
 </body>
 </html>
