--- a/views/email/editEmail.ejs
+++ b/views/email/editEmail.ejs
@@ -11,9 +11,14 @@
                     <form action="/emails/update" method="post">
                         <input type="hidden" name="id" value="<%= email._id %>">
                         <div class="form-group">
-                            <label for="address">Nome</label>
+                            <label for="address">Endereço</label>
                             <input type="text" class="form-control" id="address" name="address" placeholder="Email"
                                 aria-describedby="basic-addon1" value="<%= email.address %>">
+                        </div>
+                        <div class="form-group">
+                            <label for="address">Assunto</label>
+                            <input type="text" class="form-control" id="subject" name="subject" placeholder="Assunto"
+                                aria-describedby="basic-addon1" value="<%= email.subject %>">
                         </div>
                         <br>
                         <div class="form-group-btn">
