--- a/views/email/newEmail.ejs
+++ b/views/email/newEmail.ejs
@@ -13,6 +13,9 @@
                             <label for="address">Endereço</label>
                             <input type="email" class="form-control" id="address" name="address" placeholder="Email"
                                 aria-describedby="basic-addon1" required>
+                            <label for="subject">Assunto</label>
+                            <input type="text" class="form-control" id="subject" name="subject" placeholder="Assunto"
+                                aria-describedby="basic-addon1" required>
                         </div>
                         <br>
                         <div class="form-group-btn">
