Implementa cadastro de valores para busca em anexo PDF

--- a/views/email/emailList.ejs
+++ b/views/email/emailList.ejs
@@ -11,7 +11,7 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th>Email</th>
+                                <th>Remetente</th>
                                 <th>Ações</th>
                             </tr>
                         </thead>
