--- a/views/email/editEmail.ejs
+++ b/views/email/editEmail.ejs
@@ -8,26 +8,97 @@
                         <%= title %>
                     </h1>
                     <br>
-                    <form action="/emails/update" method="post">
-                        <input type="hidden" name="id" value="<%= email._id %>">
-                        <div class="form-group">
-                            <label for="address">Endereço</label>
-                            <input type="text" class="form-control" id="address" name="address" placeholder="Email"
-                                aria-describedby="basic-addon1" value="<%= email.address %>">
-                        </div>
-                        <div class="form-group">
-                            <label for="address">Assunto</label>
-                            <input type="text" class="form-control" id="subject" name="subject" placeholder="Assunto"
-                                aria-describedby="basic-addon1" value="<%= email.subject %>">
-                        </div>
-                        <br>
-                        <div class="form-group-btn">
-                            <input type="submit" class="btn btn-primary center-block" value="Salvar" />
-                        </div>
+                    <form id="form" action="/emails/<% if (locals.email) {%>update<% }else{ %>add<% } %>" method="post" class="justify-content-center">
+                        <% if (locals.email) {%>
+                            <input type="hidden" name="id" value="<%= email._id %>">
+                            <% } %>
+                                <div class="form-group">
+                                    <label for="address">Remetente</label>
+                                    <input type="text" class="form-control" id="address" name="address" placeholder="Remetente" aria-describedby="basic-addon1" required <% if (locals.email)
+                                        { %>value="<%= email.address %>"<% } %>>
+                                </div>
+                                <div class="form-group">
+                                    <label for="subject">Assunto</label>
+                                    <input type="text" class="form-control" id="subject" name="subject" placeholder="Assunto" aria-describedby="basic-addon1" required <% if (locals.email)
+                                        { %>value="<%= email.subject %>"<% } %>>
+                                </div>
+                                <div class="form-group">
+                                    <input type="checkbox" id="attachmentPDF" name="attachmentPDF">
+                                    <label for="attachmentPDF">Anexo PDF</label>
+                                </div>
+                                <table id="table" class="table">
+                                    <thead>
+                                        <tr>
+                                            <th>Nome</th>
+                                            <th>Valor</th>
+                                            <th>Ações</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                </table>
+                                <div>
+                                    <a href="javascript:addRow()">Adicionar linha</a>
+                                </div>
+                                <br>
+                                <br>
+                                <div class="form-group-btn">
+                                    <input type="button" class="btn btn-primary center-block" value="Salvar" onclick="doSubmit()" />
+                                </div>
                     </form>
                 </div>
             </div>
             <%- template.scripts %>
+            <script>
+                var rowCount = 0;
+
+                <% if (locals.email) { %>
+                    var dataJSON = '<%- JSON.stringify(email.valueData) %>';
+                    var data = JSON.parse(dataJSON);
+
+                    for (line of data) {
+                        createRow(line.name, line.value);
+                    }
+                <% } %>
+
+                function createRow(name, value) {
+                    addRow(name, value);
+                }
+
+                function n(n) {
+                    return n > 9 ? "" + n : "0" + n;
+                }
+
+                function addRow(nameValue, valueValue) {
+                    var table = $('#table tr:last').after('<tr id="row-' + rowCount + '">' + gennameCol(nameValue) + genValueCol(valueValue) + genRemoveAction() + '</tr>');
+                    rowCount++;
+                    applyMask();
+                }
+
+                function removeRow(rowNumber) {
+                    $('#row-' + rowNumber).remove();
+                    rowCount--;
+                }
+
+                function gennameCol(value) {
+                    return '<td><input type="text" class="form-control" id="name-' + rowCount + '" value="' + (value || '') + '" name="name" placeholder="Nome" aria-describedby="basic-addon1" required></td>';
+                }
+
+                function genValueCol(value) {
+                    return '<td><input type="text" class="form-control" id="value-' + rowCount + '" value="' + (value || '') + '" name="value" placeholder="Valor" aria-describedby="basic-addon1" required></td>';
+                }
+
+                function genRemoveAction() {
+                    return '<td><a href="javascript:removeRow(' + rowCount + ')">Remover</a></td>';
+                }
+
+                function applyMask() {}
+
+                function doSubmit() {
+                    $("input[name='value'").unmask();
+                    $('#form').submit()
+                }
+            </script>
     </body>
 
     </html>
