--- a/views/templates/navbar.html
+++ b/views/templates/navbar.html
@@ -10,30 +10,30 @@
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Usuários</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
             <a class="dropdown-item" href="/users/list">Listar</a>
-            <a class="dropdown-item" href="/users/new">Cadastar</a>
+            <a class="dropdown-item" href="/users/new">Cadastrar</a>
         </div>
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tabelas</a>
       <div class="dropdown-menu" aria-labelledby="dropdown01">
         <a class="dropdown-item" href="/tables/list">Listar</a>
-        <a class="dropdown-item" href="/tables/new">Cadastar</a>
+        <a class="dropdown-item" href="/tables/new">Cadastrar</a>
       </div>
-    </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contas</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="/bills/list">Listar</a>
-            <a class="dropdown-item" href="/bills/new">Cadastar</a>
-        </div>
     </li>
     <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Emails</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
                 <a class="dropdown-item" href="/emails/list">Listar</a>
-                <a class="dropdown-item" href="/emails/new">Cadastar</a>
+                <a class="dropdown-item" href="/emails/new">Cadastrar</a>
                 <a class="dropdown-item" href="/emails/test">Testar</a>
             </div>
+    </li>
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contas</a>
+        <div class="dropdown-menu" aria-labelledby="dropdown01">
+            <a class="dropdown-item" href="/bills/list">Listar</a>
+            <a class="dropdown-item" href="/bills/new">Cadastrar</a>
+        </div>
     </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
