--- a/views/email/emailList.ejs
+++ b/views/email/emailList.ejs
@@ -12,6 +12,7 @@
                         <thead>
                             <tr>
                                 <th>Remetente</th>
+                                <th>Situação</th>
                                 <th>Ações</th>
                             </tr>
                         </thead>
@@ -20,6 +21,9 @@
                                 <tr>
                                     <td>
                                         <%= email.address %>
+                                    </td>
+                                    <td>
+                                        <%= email.status %>
                                     </td>
                                     <td><a href='/emails/edit/<%= email._id %>'>Editar</a>
                                         <a href='/emails/remove/<%= email._id %>'>Excluir</a>
