--- a/views/email/editEmail.ejs
+++ b/views/email/editEmail.ejs
@@ -22,6 +22,16 @@
                                     <input type="text" class="form-control" id="subject" name="subject" placeholder="Assunto" aria-describedby="basic-addon1" required <% if (locals.email)
                                         { %>value="<%= email.subject %>"<% } %>>
                                 </div>
+                                <% if (locals.email) {%>
+                                    <div class="form-group">
+                                        <label for="status">Situação</label>
+                                        <select name='status' class="form-control" id="status">
+                                            <% var keys = Object.keys(statusEnum); keys.forEach(function(vst){ %>
+                                                <option <% if (vst == email.status) {%>selected="selected"<% } %> value="<%= vst %>"><%= statusEnum[vst] %></option>
+                                            <%})%>
+                                        </select>
+                                    </div>
+                                <% } %>
                                 <div class="form-group">
                                     <input type="checkbox" id="attachmentPDF" name="attachmentPDF">
                                     <label for="attachmentPDF">Anexo PDF</label>
