--- a/views/user/editUser.ejs
+++ b/views/user/editUser.ejs
@@ -15,11 +15,18 @@
                             <input type="text" class="form-control" id="name" name="name" placeholder="Nome"
                                 aria-describedby="basic-addon1" value="<%= user.name %>">
                         </div>
-                        <br>
                         <div class="form-group">
                             <label for="email">Email</label>
                             <input type="email" class="form-control" id="email" name="email" placeholder="Email"
                                 aria-describedby="basic-addon1" value="<%= user.email %>">
+                        </div>
+                        <div class="form-group">
+                            <label for="status">Situação</label>
+                            <select name='status' class="form-control" id="status">
+                                <% var keys = Object.keys(statusEnum); keys.forEach(function(vst){ %>
+                                    <option <% if (vst == user.status) {%>selected="selected"<% } %> value="<%= vst %>"><%= statusEnum[vst] %></option>
+                                <%})%>
+                            </select>
                         </div>
                         <br>
                         <div class="form-group-btn">
