--- a/views/user/userList.ejs
+++ b/views/user/userList.ejs
@@ -13,6 +13,7 @@
                             <tr>
                                 <th>Nome</th>
                                 <th>Email</th>
+                                <th>Situação</th>
                                 <th>Ações</th>
                             </tr>
                         </thead>
@@ -24,6 +25,9 @@
                                     </td>
                                     <td style="word-break: break-word;">
                                         <%= user.email %>
+                                    </td>
+                                    <td>
+                                        <%= user.status %>
                                     </td>
                                     <td>
                                         <a href='/users/edit/<%= user._id %>'>Editar</a>
