--- a/volumes/lembrador-contas/src/views/bill/editBill.ejs
+++ b/volumes/lembrador-contas/src/views/bill/editBill.ejs
@@ -13,13 +13,13 @@
                         <div class="form-group">
                             <label for="company">Empresa</label>
                             <input type="text" class="form-control" id="company" name="company" placeholder="Empresa"
-                                aria-describedby="basic-addon1" value="<%= bill.company %>">
+                                aria-describedby="basic-addon1" value="<%= bill.company %>" required>
                         </div>
                         <br>
                         <div class="form-group">
                             <label for="dueDay">Dia vencimento</label>
                             <input type="text" class="form-control" id="dueDay" name="dueDay" placeholder="Dia Vencimento"
-                                aria-describedby="basic-addon1" value="<%= bill.dueDay %>">
+                                aria-describedby="basic-addon1" value="<%= bill.dueDay %>" required>
                         </div>
                         <br>
                         <div class="form-group">
