--- a/volumes/lembrador-contas/src/views/templates/navbar.html
+++ b/volumes/lembrador-contas/src/views/templates/navbar.html
@@ -35,6 +35,13 @@
             <a class="dropdown-item" href="/bills/new">Cadastrar</a>
         </div>
     </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">APIs</a>
+      <div class="dropdown-menu" aria-labelledby="dropdown01">
+          <a class="dropdown-item" href="/apis/list">Listar</a>
+          <a class="dropdown-item" href="/apis/new">Cadastrar</a>
+      </div>
+  </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Buscar">
